# ai-daily-planner

./: .gitignore  README.md  package-lock.json
backend/: .env.example  .gitignore  alembic.ini  planner.db  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_pdf_ingestions.py  0003_add_secondary_goals.py  0004_add_recommendation_history.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: availability.py  briefs.py  onboarding.py  recommendations.py  router.py  tasks.py  uploads.py
backend/app/core/: config.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  availability.py  pdf_ingestion.py  recommendation_history.py  task.py  user.py
backend/app/schemas/: availability.py  brief.py  pdf.py  recommendation.py  task.py  user.py
backend/app/services/: availability.py  briefs.py  external_ocr.py  llm_cleanup.py  pdf_ingestions.py  recommendations.py  tasks.py  users.py
frontend/: .env  .eslintrc.cjs  index.html  package-lock.json  package.json  tsconfig.node.json
frontend/src/: App.tsx  types.ts
frontend/src/components/: AvailabilityCard.tsx  BriefPreview.tsx  ChatPanel.tsx  GoalBanner.tsx  OnboardingForm.tsx  PdfUploadCard.tsx  TaskComposer.tsx  TaskList.tsx
frontend/src/hooks/: usePlannerState.ts
frontend/src/lib/: api.ts
frontend/src/mocks/: plannerData.ts
frontend/src/styles/: global.css
